assets/stylesheets/haltr.css
.invoiceFilter {
  margin: 0 0 20px;
  }
.invoiceFilter th {
  margin: 0;
  padding: 4px 10px 4px 0;
  width: 90px;
  text-align: right;
  vertical-align: top;
  font-size: 13px;
  line-height: 22px;
}
.invoiceFilter td {
  margin: 0;
  padding: 4px 0;
  vertical-align: top;
  line-height: 22px;
}
.invoiceFilter ul {
  margin: 0;
}
.invoiceFilter li {
  display: inline;
  margin-right: 8px;
}

#invoices tr, #clients tr {
  cursor: pointer;
}

.pastdue {
  color: red;
}

div.profilelink {
  height: 30px;
  color: #005f00;
}

div.profilelinkred {
  height: 30px;
  color: #dd6600;
}

span.invoiceLineHeader {
  display: block;
  float: left;
  margin-left: 2px;
  margin-right: 2px;
  overflow: hidden;
}

/* Sidebar */

.invoice_menu {
  list-style-type: none;
  font-size: 13px;
  letter-spacing: 0px;
  word-spacing: 0px;
  padding-left: 0;
}
.invoice_menu li {
  border-bottom-width: 1px;
  border-bottom-style: dashed;
  border-bottom-color: #CCCCCC;
  overflow: hidden;
}
.invoice_menu a {
  display: block;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  border-bottom-color: #CCCCCC;
  background-repeat: no-repeat;
  padding: 7px 3px 7px 32px;
  background-position: 3px 3px;
}
.invoice_menu a:hover {
  background-color: #fff;
}
.icon-haltr-invoice , .icon-haltr-invoices-from-templates {  background-image: url(../images/invoice.gif); }
.icon-haltr-invoices      {  background-image: url(../images/invoices.gif); }
.icon-haltr-templates     {  background-image: url(../images/templates.gif); }
.icon-haltr-report        {  background-image: url(../images/report.gif); }
.icon-haltr-edit          {  background-image: url(../images/edit.gif); }
.icon-haltr-delete        {  background-image: url(../images/delete.gif); }
.icon-haltr-mark-sent     {  background-image: url(../images/mark_sent.gif); }
.icon-haltr-mark-not-sent {  background-image: url(../images/mark_not_sent.gif); }
.icon-haltr-mark-closed   {  background-image: url(../images/mark_closed.gif); }
.icon-haltr-save          {  background-image: url(../images/save.gif); }
.icon-haltr-send          {  background-image: url(../images/send.gif); }
.icon-haltr-template      {  background-image: url(../images/template.gif); }
.icon-haltr-my-company    {  background-image: url(../images/my_company.gif); }
.icon-haltr-company       {  background-image: url(../images/company.gif); }
.icon-haltr-companies     {  background-image: url(../images/companies.gif); }
.icon-haltr-person        {  background-image: url(../images/person.gif); }
.icon-haltr-payment       {  background-image: url(../images/payment.gif); }
.icon-haltr-tasks         {  background-image: url(../images/tasks.gif); }

.disabled {
  text-decoration: line-through !important;
}

.overlay {
  position:absolute; top:0; left:0;
  /* width:100%; height:100% */
  width: 1138px; height: 1132px;
  z-index: 1001;
  background: transparent url(../images/overlay.png) 50% 50% repeat;
  opacity: 0.7;
}

.new_client_box {
  position:absolute; top:200px; left:250px;
  background-color: grey;
  width: 650px;
  z-index: 1002;
  border: 4px solid #333333;
}

#new_client {
  margin: 30px;
}

.mail_box {
  position:absolute; top:200px; left:250px;
  background-color: #FFFFCC;
  width: 650px;
  z-index: 1002;
  border: 4px solid #333333;
}

#mail {
  margin: 30px;
}

.amended {
  text-decoration: line-through;
} 

select.tax {
  width: 77px;
}

.hidden {
  display: none !important;
  /* useful to debug background-color: yellow !important; */
}

#invoice_taxes_global span, #invoice_lines span {
  margin: 5px;
}

.tabs li {
  margin-left: 0px !important;
  padding-left: 0px !important;
}

#tab-received_with_new, .unread {
  color: #ff9900 !important;
}

span.help {
  margin-left: 10px;
}

span.lineErrorExplanation {
  border: 2px solid;
  padding: 4px 4px 4px 4px;
  margin-left: 10px;
}

span.lineErrorExplanation a {
  font-weight: bold;
}

span.ownCertificate {
  border: 2px solid;
  padding: 4px 4px 4px 4px;
  margin-left: 10px;
}

span.ownCertificate a {
  font-weight: bold;
}

